Fix responsiveness
This commit allows the contents to fill the screen size as it's zoomed out. It also considers overflowed content of the 'Home' page and allows the overview image to grow and shrink appropriately.

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -22,7 +22,6 @@
 }
 
 html, body {
-    max-width: 1920px;
     height: 100%;
 }
 
